# file-management-telegram-bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.nginx  README.md  docker-compose-bot.yml  docker-compose-full.yml  docker-compose-minio.yml  docker-compose.yml  main.py  minio-cors-setup.sh  minio-init.sh  nginx.conf  pyproject.toml  run_celery.sh
.github/workflows/: ci-cd.yml
apps/account/: admin.py  apps.py  models.py  signals.py
apps/account/migrations/: 0001_initial.py  0002_user_is_permiume_user_remaining_download_size.py  0003_user_maximum_download_size_per_day.py  0004_rename_is_permiume_user_is_premium.py  0005_user_first_name_user_last_name_user_telegram_id.py  0006_user_premium_request_date_user_premium_requested.py
apps/file_manager/: admin.py  apps.py  backend.py  models.py  singnals.py  tasks.py  utils.py
apps/file_manager/migrations/: 0001_initial.py  0002_filemanager_file_mime_type_filemanager_file_size.py  0003_alter_filemanager_name.py
apps/telegram_bot/: apps.py  bot.py  local_bot.py  models.py  tasks.py
apps/telegram_bot/handlers/: commons.py  documents.py  download_link.py
apps/telegram_bot/locale/en/LC_MESSAGES/: django.mo  django.po
apps/telegram_bot/locale/fa/LC_MESSAGES/: django.mo  django.po
apps/telegram_bot/management/commands/: runbot.py  runlocalbot.py
apps/telegram_bot/utils/: utils.py
config/: celery.py  settings.py
