[project]
name = "telbot-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.4",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-minio-backend>=3.8.0",
    "django-minio-storage>=0.5.8",
    "ipython>=9.4.0",
    "pytelegrambotapi>=4.27.0",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "python-telegram-bot>=22.2",
]
