[project]
name = "telbot-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "celery[redis]>=5.5.3",
    "django>=5.2.4",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-minio-backend>=3.8.0",
    "django-minio-storage>=0.5.8",
    "dotenv>=0.9.9",
    "flower>=2.0.1",
    "ipython>=9.4.0",
    "libmagic>=1.0",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "redis>=5.2.1",
    "tgcrypto>=1.2.5",
    "yt-dlp>=2025.6.30",
]
